test/invalid_confs/invalid_pathname.lua
--ERROR: pathname must start with
Listen "8080" {
    Host "" {
        Path "+/asdf" {
            echo = "hello"
        }
    }
}
